[package]
name = "telly"
version = "0.2.0"
edition = "2024"
authors = ["Andrea Raponi <andrearaponi@outlook.com>"]
description = "A tool to send message from bot telegram"
readme = "README.md"
homepage = "https://github.com/andrearaponi/Telly"
repository = "https://github.com/andrearaponi/Telly"
keywords = ["cli", "telegram-bot"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
configparser = "3.0.2"
curl = "0.4.46"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.8.0"
assert_cmd = "2.0.12"
predicates = "3.0.4"